@@ -40,6 +40,7 @@ import io.trino.sql.tree.Comment;
 import io.trino.sql.tree.Commit;
 import io.trino.sql.tree.ComparisonExpression;
 import io.trino.sql.tree.Corresponding;
+import io.trino.sql.tree.CreateBranch;
 import io.trino.sql.tree.CreateCatalog;
 import io.trino.sql.tree.CreateMaterializedView;
 import io.trino.sql.tree.CreateRole;
@@ -48,6 +49,7 @@ import io.trino.sql.tree.CreateTable;
 import io.trino.sql.tree.CreateTableAsSelect;
 import io.trino.sql.tree.CreateView;
 import io.trino.sql.tree.CurrentTimestamp;
+import io.trino.sql.tree.DataType;
 import io.trino.sql.tree.Deallocate;
 import io.trino.sql.tree.DecimalLiteral;
 import io.trino.sql.tree.Delete;
@@ -58,6 +60,7 @@ import io.trino.sql.tree.DescribeOutput;
 import io.trino.sql.tree.Descriptor;
 import io.trino.sql.tree.DescriptorField;
 import io.trino.sql.tree.DoubleLiteral;
+import io.trino.sql.tree.DropBranch;
 import io.trino.sql.tree.DropCatalog;
 import io.trino.sql.tree.DropColumn;
 import io.trino.sql.tree.DropMaterializedView;
@@ -77,6 +80,7 @@ import io.trino.sql.tree.ExplainAnalyze;
 import io.trino.sql.tree.ExplainFormat;
 import io.trino.sql.tree.ExplainType;
 import io.trino.sql.tree.Expression;
+import io.trino.sql.tree.FastForwardBranch;
 import io.trino.sql.tree.FetchFirst;
 import io.trino.sql.tree.Format;
 import io.trino.sql.tree.FrameBound;
@@ -119,6 +123,7 @@ import io.trino.sql.tree.LambdaExpression;
 import io.trino.sql.tree.Lateral;
 import io.trino.sql.tree.LikeClause;
 import io.trino.sql.tree.Limit;
+import io.trino.sql.tree.Literal;
 import io.trino.sql.tree.LogicalExpression;
 import io.trino.sql.tree.LongLiteral;
 import io.trino.sql.tree.MeasureDefinition;
@@ -161,6 +166,7 @@ import io.trino.sql.tree.QueryPeriod;
 import io.trino.sql.tree.QuerySpecification;
 import io.trino.sql.tree.RangeQuantifier;
 import io.trino.sql.tree.RefreshMaterializedView;
+import io.trino.sql.tree.RefreshView;
 import io.trino.sql.tree.Relation;
 import io.trino.sql.tree.RenameColumn;
 import io.trino.sql.tree.RenameMaterializedView;
@@ -187,6 +193,7 @@ import io.trino.sql.tree.SetRole;
 import io.trino.sql.tree.SetSession;
 import io.trino.sql.tree.SetSessionAuthorization;
 import io.trino.sql.tree.SetTimeZone;
+import io.trino.sql.tree.ShowBranches;
 import io.trino.sql.tree.ShowCatalogs;
 import io.trino.sql.tree.ShowColumns;
 import io.trino.sql.tree.ShowFunctions;
@@ -261,6 +268,7 @@ import static io.trino.sql.parser.ParserAssert.expression;
 import static io.trino.sql.parser.ParserAssert.rowPattern;
 import static io.trino.sql.parser.ParserAssert.statement;
 import static io.trino.sql.parser.TreeNodes.columnDefinition;
+import static io.trino.sql.parser.TreeNodes.columnDefinitionWithDefault;
 import static io.trino.sql.parser.TreeNodes.dateTimeType;
 import static io.trino.sql.parser.TreeNodes.field;
 import static io.trino.sql.parser.TreeNodes.location;
@@ -860,18 +868,18 @@ public class TestSqlParser
         assertStatement("SELECT 123 INTERSECT DISTINCT CORRESPONDING SELECT 123 INTERSECT ALL CORRESPONDING SELECT 123",
                 query(new Intersect(
                         ImmutableList.of(
-                                new Intersect(ImmutableList.of(createSelect123(), createSelect123()), true, Optional.of(new Corresponding(location(1 ,1), List.of()))),
+                                new Intersect(ImmutableList.of(createSelect123(), createSelect123()), true, Optional.of(new Corresponding(location(1, 1), List.of()))),
                                 createSelect123()),
                         false,
-                        Optional.of(new Corresponding(location(1 ,1), List.of())))));
+                        Optional.of(new Corresponding(location(1, 1), List.of())))));
 
         assertStatement("SELECT 123 INTERSECT DISTINCT CORRESPONDING BY (x) SELECT 123 INTERSECT ALL CORRESPONDING SELECT 123",
                 query(new Intersect(
                         ImmutableList.of(
-                                new Intersect(ImmutableList.of(createSelect123(), createSelect123()), true, Optional.of(new Corresponding(location(1 ,1), List.of(identifier("x"))))),
+                                new Intersect(ImmutableList.of(createSelect123(), createSelect123()), true, Optional.of(new Corresponding(location(1, 1), List.of(identifier("x"))))),
                                 createSelect123()),
                         false,
-                        Optional.of(new Corresponding(location(1 ,1), List.of())))));
+                        Optional.of(new Corresponding(location(1, 1), List.of())))));
     }
 
     @Test
@@ -888,18 +896,18 @@ public class TestSqlParser
         assertStatement("SELECT 123 UNION DISTINCT CORRESPONDING SELECT 123 UNION ALL CORRESPONDING SELECT 123",
                 query(new Union(
                         ImmutableList.of(
-                                new Union(ImmutableList.of(createSelect123(), createSelect123()), true, Optional.of(new Corresponding(location(1 ,1), List.of()))),
+                                new Union(ImmutableList.of(createSelect123(), createSelect123()), true, Optional.of(new Corresponding(location(1, 1), List.of()))),
                                 createSelect123()),
                         false,
-                        Optional.of(new Corresponding(location(1 ,1), List.of())))));
+                        Optional.of(new Corresponding(location(1, 1), List.of())))));
 
         assertStatement("SELECT 123 UNION DISTINCT CORRESPONDING BY (x) SELECT 123 UNION ALL CORRESPONDING SELECT 123",
                 query(new Union(
                         ImmutableList.of(
-                                new Union(ImmutableList.of(createSelect123(), createSelect123()), true, Optional.of(new Corresponding(location(1 ,1), List.of(identifier("x"))))),
+                                new Union(ImmutableList.of(createSelect123(), createSelect123()), true, Optional.of(new Corresponding(location(1, 1), List.of(identifier("x"))))),
                                 createSelect123()),
                         false,
-                        Optional.of(new Corresponding(location(1 ,1), List.of())))));
+                        Optional.of(new Corresponding(location(1, 1), List.of())))));
     }
 
     @Test
@@ -916,18 +924,18 @@ public class TestSqlParser
         assertStatement("SELECT 123 EXCEPT DISTINCT CORRESPONDING SELECT 123 EXCEPT ALL CORRESPONDING SELECT 123",
                 query(new Except(
                         location(1, 1),
-                        new Except(location(1, 1), createSelect123(), createSelect123(), true, Optional.of(new Corresponding(location(1 ,1), List.of()))),
+                        new Except(location(1, 1), createSelect123(), createSelect123(), true, Optional.of(new Corresponding(location(1, 1), List.of()))),
                         createSelect123(),
                         false,
-                        Optional.of(new Corresponding(location(1 ,1), List.of())))));
+                        Optional.of(new Corresponding(location(1, 1), List.of())))));
 
         assertStatement("SELECT 123 EXCEPT DISTINCT CORRESPONDING BY (x) SELECT 123 EXCEPT ALL CORRESPONDING SELECT 123",
                 query(new Except(
                         location(1, 1),
-                        new Except(location(1, 1), createSelect123(), createSelect123(), true, Optional.of(new Corresponding(location(1 ,1), List.of(identifier("x"))))),
+                        new Except(location(1, 1), createSelect123(), createSelect123(), true, Optional.of(new Corresponding(location(1, 1), List.of(identifier("x"))))),
                         createSelect123(),
                         false,
-                        Optional.of(new Corresponding(location(1 ,1), List.of())))));
+                        Optional.of(new Corresponding(location(1, 1), List.of())))));
     }
 
     private static QuerySpecification createSelect123()
@@ -1666,6 +1674,127 @@ public class TestSqlParser
     }
 
     @Test
+    void testCreateBranch()
+    {
+        assertThat(statement("CREATE BRANCH b IN TABLE t"))
+                .isEqualTo(new CreateBranch(
+                        location(1, 1),
+                        QualifiedName.of(ImmutableList.of(new Identifier(location(1, 26), "t", false))),
+                        new Identifier(location(1, 15), "b", false),
+                        Optional.empty(),
+                        FAIL,
+                        List.of()));
+
+        assertThat(statement("CREATE BRANCH b IN TABLE t FROM other"))
+                .isEqualTo(new CreateBranch(
+                        location(1, 1),
+                        QualifiedName.of(ImmutableList.of(new Identifier(location(1, 26), "t", false))),
+                        new Identifier(location(1, 15), "b", false),
+                        Optional.of(new Identifier(location(1, 33), "other", false)),
+                        FAIL,
+                        List.of()));
+
+        assertThat(statement("CREATE BRANCH b WITH (property_1 = 'value_1') IN TABLE t"))
+                .isEqualTo(new CreateBranch(
+                        location(1, 1),
+                        QualifiedName.of(ImmutableList.of(new Identifier(location(1, 56), "t", false))),
+                        new Identifier(location(1, 15), "b", false),
+                        Optional.empty(),
+                        FAIL,
+                        List.of(new Property(
+                                location(1, 23),
+                                new Identifier(location(1, 23), "property_1", false),
+                                new StringLiteral(location(1, 36), "value_1")))));
+
+        assertThat(statement("CREATE OR REPLACE BRANCH b WITH (property_1 = 'value_1') IN TABLE t"))
+                .isEqualTo(new CreateBranch(
+                        location(1, 1),
+                        QualifiedName.of(ImmutableList.of(new Identifier(location(1, 67), "t", false))),
+                        new Identifier(location(1, 26), "b", false),
+                        Optional.empty(),
+                        REPLACE,
+                        List.of(new Property(
+                                location(1, 34),
+                                new Identifier(location(1, 34), "property_1", false),
+                                new StringLiteral(location(1, 47), "value_1")))));
+
+        assertThat(statement("CREATE OR REPLACE BRANCH b IN TABLE t"))
+                .isEqualTo(new CreateBranch(
+                        location(1, 1),
+                        QualifiedName.of(ImmutableList.of(new Identifier(location(1, 37), "t", false))),
+                        new Identifier(location(1, 26), "b", false),
+                        Optional.empty(),
+                        REPLACE,
+                        List.of()));
+
+        assertThat(statement("CREATE BRANCH IF NOT EXISTS b IN TABLE t"))
+                .isEqualTo(new CreateBranch(
+                        location(1, 1),
+                        QualifiedName.of(ImmutableList.of(new Identifier(location(1, 40), "t", false))),
+                        new Identifier(location(1, 29), "b", false),
+                        Optional.empty(),
+                        IGNORE,
+                        List.of()));
+
+        assertThat(statement("CREATE BRANCH IF NOT EXISTS b WITH (property_1 = 'value_1') IN TABLE t"))
+                .isEqualTo(new CreateBranch(
+                        location(1, 1),
+                        QualifiedName.of(ImmutableList.of(new Identifier(location(1, 70), "t", false))),
+                        new Identifier(location(1, 29), "b", false),
+                        Optional.empty(),
+                        IGNORE,
+                        List.of(new Property(
+                                location(1, 37),
+                                new Identifier(location(1, 37), "property_1", false),
+                                new StringLiteral(location(1, 50), "value_1")))));
+
+        assertStatementIsInvalid("CREATE OR REPLACE BRANCH IF NOT EXISTS b IN TABLE t")
+                .withMessage("line 1:1: 'OR REPLACE' and 'IF NOT EXISTS' clauses can not be used together");
+    }
+
+    @Test
+    void testDropBranch()
+    {
+        assertThat(statement("DROP BRANCH b IN TABLE t"))
+                .isEqualTo(new DropBranch(
+                        location(1, 1),
+                        QualifiedName.of(ImmutableList.of(new Identifier(location(1, 24), "t", false))),
+                        false,
+                        new Identifier(location(1, 13), "b", false)));
+
+        assertThat(statement("DROP BRANCH IF EXISTS b IN TABLE t"))
+                .isEqualTo(new DropBranch(
+                        location(1, 1),
+                        QualifiedName.of(ImmutableList.of(new Identifier(location(1, 34), "t", false))),
+                        true,
+                        new Identifier(location(1, 23), "b", false)));
+    }
+
+    @Test
+    void testFastForwardBranch()
+    {
+        assertThat(statement("ALTER BRANCH from_branch IN TABLE t FAST FORWARD TO to_branch"))
+                .isEqualTo(new FastForwardBranch(
+                        location(1, 1),
+                        QualifiedName.of(ImmutableList.of(new Identifier(location(1, 35), "t", false))),
+                        new Identifier(location(1, 14), "from_branch", false),
+                        new Identifier(location(1, 53), "to_branch", false)));
+    }
+
+    @Test
+    void testShowBranches()
+    {
+        assertThat(statement("SHOW BRANCHES FROM TABLE t"))
+                .isEqualTo(new ShowBranches(
+                        location(1, 1),
+                        QualifiedName.of(ImmutableList.of(new Identifier(location(1, 26), "t", false)))));
+        assertThat(statement("SHOW BRANCHES IN TABLE t"))
+                .isEqualTo(new ShowBranches(
+                        location(1, 1),
+                        QualifiedName.of(ImmutableList.of(new Identifier(location(1, 24), "t", false)))));
+    }
+
+    @Test
     public void testSelectWithRowType()
     {
         assertStatement("SELECT col1.f1, col2, col3.f1.f2.f3 FROM table1",
@@ -2212,7 +2341,9 @@ public class TestSqlParser
 
         // with LIKE
         assertStatement("CREATE TABLE IF NOT EXISTS bar (LIKE like_table)",
-                new CreateTable(QualifiedName.of("bar"),
+                new CreateTable(
+                        new NodeLocation(1, 1),
+                        QualifiedName.of("bar"),
                         ImmutableList.of(
                                 new LikeClause(QualifiedName.of("like_table"),
                                         Optional.empty())),
@@ -2222,7 +2353,9 @@ public class TestSqlParser
 
         assertThat(statement("CREATE TABLE IF NOT EXISTS bar (c VARCHAR, LIKE like_table)"))
                 .ignoringLocation()
-                .isEqualTo(new CreateTable(QualifiedName.of("bar"),
+                .isEqualTo(new CreateTable(
+                        new NodeLocation(1, 1),
+                        QualifiedName.of("bar"),
                         ImmutableList.of(
                                 new ColumnDefinition(QualifiedName.of("c"), simpleType(location(1, 35), "VARCHAR"), true, emptyList(), Optional.empty()),
                                 new LikeClause(QualifiedName.of("like_table"),
@@ -2233,7 +2366,9 @@ public class TestSqlParser
 
         assertThat(statement("CREATE TABLE IF NOT EXISTS bar (c VARCHAR, LIKE like_table, d BIGINT)"))
                 .ignoringLocation()
-                .isEqualTo(new CreateTable(QualifiedName.of("bar"),
+                .isEqualTo(new CreateTable(
+                        new NodeLocation(1, 1),
+                        QualifiedName.of("bar"),
                         ImmutableList.of(
                                 new ColumnDefinition(QualifiedName.of("c"), simpleType(location(1, 35), "VARCHAR"), true, emptyList(), Optional.empty()),
                                 new LikeClause(QualifiedName.of("like_table"),
@@ -2244,7 +2379,8 @@ public class TestSqlParser
                         Optional.empty()));
 
         assertStatement("CREATE TABLE IF NOT EXISTS bar (LIKE like_table INCLUDING PROPERTIES)",
-                new CreateTable(QualifiedName.of("bar"),
+                new CreateTable(new NodeLocation(1, 1),
+                        QualifiedName.of("bar"),
                         ImmutableList.of(
                                 new LikeClause(QualifiedName.of("like_table"),
                                         Optional.of(LikeClause.PropertiesOption.INCLUDING))),
@@ -2254,7 +2390,9 @@ public class TestSqlParser
 
         assertThat(statement("CREATE TABLE IF NOT EXISTS bar (c VARCHAR, LIKE like_table EXCLUDING PROPERTIES)"))
                 .ignoringLocation()
-                .isEqualTo(new CreateTable(QualifiedName.of("bar"),
+                .isEqualTo(new CreateTable(
+                        new NodeLocation(1, 1),
+                        QualifiedName.of("bar"),
                         ImmutableList.of(
                                 new ColumnDefinition(QualifiedName.of("c"), simpleType(location(1, 35), "VARCHAR"), true, emptyList(), Optional.empty()),
                                 new LikeClause(QualifiedName.of("like_table"),
@@ -2265,7 +2403,9 @@ public class TestSqlParser
 
         assertThat(statement("CREATE TABLE IF NOT EXISTS bar (c VARCHAR, LIKE like_table EXCLUDING PROPERTIES) COMMENT 'test'"))
                 .ignoringLocation()
-                .isEqualTo(new CreateTable(QualifiedName.of("bar"),
+                .isEqualTo(new CreateTable(
+                        new NodeLocation(1, 1),
+                        QualifiedName.of("bar"),
                         ImmutableList.of(
                                 new ColumnDefinition(QualifiedName.of("c"), simpleType(location(1, 35), "VARCHAR"), true, emptyList(), Optional.empty()),
                                 new LikeClause(QualifiedName.of("like_table"),
@@ -2273,6 +2413,60 @@ public class TestSqlParser
                         IGNORE,
                         ImmutableList.of(),
                         Optional.of("test")));
+    }
+
+    @Test
+    void testCreateTableWithDefault()
+    {
+        assertThat(statement("CREATE TABLE foo (a VARCHAR, b BIGINT DEFAULT 123, c IPADDRESS)"))
+                .isEqualTo(new CreateTable(
+                        location(1, 1),
+                        qualifiedName(location(1, 14), "foo"),
+                        ImmutableList.of(
+                                columnDefinition(location(1, 19), "a", simpleType(location(1, 21), "VARCHAR")),
+                                columnDefinitionWithDefault(location(1, 30), "b", simpleType(location(1, 32), "BIGINT"), new LongLiteral(location(1, 47), "123")),
+                                columnDefinition(location(1, 52), "c", simpleType(location(1, 54), "IPADDRESS"))),
+                        FAIL,
+                        ImmutableList.of(),
+                        Optional.empty()));
+
+        assertThat(statement("CREATE TABLE foo (a VARCHAR DEFAULT 'test default' COMMENT 'test comment')"))
+                .isEqualTo(new CreateTable(
+                        location(1, 1),
+                        qualifiedName(location(1, 14), "foo"),
+                        ImmutableList.of(
+                                columnDefinitionWithDefault(
+                                        location(1, 19),
+                                        "a",
+                                        simpleType(location(1, 21), "VARCHAR"),
+                                        new StringLiteral(location(1, 37), "test default"),
+                                        "test comment")),
+                        FAIL,
+                        ImmutableList.of(),
+                        Optional.empty()));
+
+        NodeLocation location = location(1, 19);
+        DataType type = simpleType(location(1, 21), "VARCHAR");
+        Literal defaultValue = new NullLiteral(location(1, 37));
+        assertThat(statement("CREATE TABLE foo (a VARCHAR DEFAULT NULL NOT NULL)"))
+                .isEqualTo(new CreateTable(
+                        location(1, 1),
+                        qualifiedName(location(1, 14), "foo"),
+                        ImmutableList.of(
+                                new ColumnDefinition(location,
+                                        qualifiedName(location, "a"),
+                                        type,
+                                        Optional.of(defaultValue),
+                                        false,
+                                        emptyList(),
+                                        Optional.empty())),
+                        FAIL,
+                        ImmutableList.of(),
+                        Optional.empty()));
+
+        assertThatThrownBy(() -> SQL_PARSER.createStatement("CREATE TABLE foo (a VARCHAR DEFAULT CURRENT_USER)"))
+                .isInstanceOf(ParsingException.class)
+                .hasMessageMatching("line 1:37: mismatched input 'CURRENT_USER'.*");
     }
 
     @Test
@@ -2288,6 +2482,7 @@ public class TestSqlParser
                 """))
                 .ignoringLocation()
                 .isEqualTo(new CreateTable(
+                        new NodeLocation(1, 1),
                         QualifiedName.of("foo"),
                         ImmutableList.of(
                                 new ColumnDefinition(QualifiedName.of("a"), simpleType(location(1, 20), "VARCHAR"), false, emptyList(), Optional.of("column a")),
@@ -3117,10 +3312,10 @@ public class TestSqlParser
                 Optional.empty(),
                 Optional.empty(),
                 Optional.empty());
-        assertStatement(queryParenthesizedWith, new CreateTableAsSelect(table, query, FAIL, ImmutableList.of(), false, Optional.empty(), Optional.empty()));
-        assertStatement(queryUnparenthesizedWith, new CreateTableAsSelect(table, query, FAIL, ImmutableList.of(), false, Optional.empty(), Optional.empty()));
-        assertStatement(queryParenthesizedWithHasAlias, new CreateTableAsSelect(table, query, FAIL, ImmutableList.of(), false, Optional.of(ImmutableList.of(new Identifier("a"))), Optional.empty()));
-        assertStatement(queryUnparenthesizedWithHasAlias, new CreateTableAsSelect(table, query, FAIL, ImmutableList.of(), false, Optional.of(ImmutableList.of(new Identifier("a"))), Optional.empty()));
+        assertStatement(queryParenthesizedWith, new CreateTableAsSelect(location(1, 1), table, query, FAIL, ImmutableList.of(), false, Optional.empty(), Optional.empty()));
+        assertStatement(queryUnparenthesizedWith, new CreateTableAsSelect(location(1, 1), table, query, FAIL, ImmutableList.of(), false, Optional.empty(), Optional.empty()));
+        assertStatement(queryParenthesizedWithHasAlias, new CreateTableAsSelect(location(1, 1), table, query, FAIL, ImmutableList.of(), false, Optional.of(ImmutableList.of(new Identifier("a"))), Optional.empty()));
+        assertStatement(queryUnparenthesizedWithHasAlias, new CreateTableAsSelect(location(1, 1), table, query, FAIL, ImmutableList.of(), false, Optional.of(ImmutableList.of(new Identifier("a"))), Optional.empty()));
     }
 
     @Test
@@ -3228,10 +3423,28 @@ public class TestSqlParser
         Query query = simpleQuery(selectList(new AllColumns()), table(QualifiedName.of("t")));
 
         assertStatement("INSERT INTO a.\"b/c\".d SELECT * FROM t",
-                new Insert(table, Optional.empty(), query));
+                new Insert(location(1, 1), table, Optional.empty(), query));
 
         assertStatement("INSERT INTO a.\"b/c\".d (c1, c2) SELECT * FROM t",
-                new Insert(table, Optional.of(ImmutableList.of(identifier("c1"), identifier("c2"))), query));
+                new Insert(location(1, 1), table, Optional.of(ImmutableList.of(identifier("c1"), identifier("c2"))), query));
+
+        assertThat(statement("INSERT INTO t @ dev VALUES 1"))
+                .isEqualTo(new Insert(
+                        location(1, 1),
+                        new Table(
+                                location(1, 1),
+                                QualifiedName.of(List.of(new Identifier(location(1, 13), "t", false))),
+                                Optional.of(new Identifier(location(1, 17), "dev", false))),
+                        Optional.empty(),
+                        new Query(
+                                location(1, 21),
+                                List.of(),
+                                List.of(),
+                                Optional.empty(),
+                                new Values(location(1, 21), List.of(new LongLiteral(location(1, 28), "1"))),
+                                Optional.empty(),
+                                Optional.empty(),
+                                Optional.empty())));
     }
 
     @Test
@@ -3249,6 +3462,15 @@ public class TestSqlParser
                                 ComparisonExpression.Operator.EQUAL,
                                 new Identifier(location(1, 21), "a", false),
                                 new Identifier(location(1, 25), "b", false)))));
+
+        assertThat(statement("DELETE FROM t @ dev"))
+                .isEqualTo(new Delete(
+                        location(1, 1),
+                        new Table(
+                                location(1, 1),
+                                QualifiedName.of(ImmutableList.of(new Identifier(location(1, 13), "t", false))),
+                                Optional.of(new Identifier(location(1, 17), "dev", false))),
+                        Optional.empty()));
     }
 
     @Test
@@ -3289,6 +3511,31 @@ public class TestSqlParser
                                         Optional.of(equal(nameReference("c", "action"), new StringLiteral("new"))),
                                         ImmutableList.of(new Identifier("part"), new Identifier("qty")),
                                         ImmutableList.of(nameReference("c", "part"), nameReference("c", "qty"))))));
+
+        assertThat(statement(
+                """
+                MERGE INTO inventory @ dev AS i
+                  USING changes AS c
+                  ON true
+                WHEN MATCHED
+                  THEN DELETE
+                """))
+                .isEqualTo(new Merge(
+                        location,
+                        new AliasedRelation(
+                                new Table(
+                                    location(1, 1),
+                                    QualifiedName.of(List.of(new Identifier(location(1, 12), "inventory", false))),
+                                    Optional.of(new Identifier(location(1, 24), "dev", false))),
+                                new Identifier(location(1, 31), "i", false),
+                                null),
+                        new AliasedRelation(
+                                location(2, 9),
+                                new Table(location(2, 9), QualifiedName.of(List.of(new Identifier(location(2, 9), "changes", false)))),
+                                new Identifier(location(2, 20), "c", false),
+                                null),
+                        new BooleanLiteral(location(3, 6), "true"),
+                    ImmutableList.of(new MergeDelete(location(4, 1), Optional.empty()))));
     }
 
     @Test
@@ -3522,6 +3769,15 @@ public class TestSqlParser
     }
 
     @Test
+    public void testRefreshView()
+    {
+        assertThat(statement("ALTER VIEW a REFRESH"))
+                .isEqualTo(new RefreshView(
+                        location(1, 1),
+                        QualifiedName.of(ImmutableList.of(new Identifier(location(1, 12), "a", false)))));
+    }
+
+    @Test
     public void testAlterViewSetAuthorization()
     {
         assertThat(statement("ALTER VIEW foo.bar.baz SET AUTHORIZATION qux")).isEqualTo(
@@ -3542,6 +3798,29 @@ public class TestSqlParser
                         "VIEW",
                         QualifiedName.of(ImmutableList.of(new Identifier(location(1, 12), "foo", false), new Identifier(location(1, 16), "bar", false), new Identifier(location(1, 20), "baz", false))),
                         new PrincipalSpecification(PrincipalSpecification.Type.ROLE, new Identifier(location(1, 47), "qux", false))));
+    }
+
+    @Test
+    public void testAlterMaterializedViewSetAuthorization()
+    {
+        assertThat(statement("ALTER MATERIALIZED VIEW foo.bar.baz SET AUTHORIZATION qux")).isEqualTo(
+                new SetAuthorizationStatement(
+                        location(1, 1),
+                        "MATERIALIZED VIEW",
+                        QualifiedName.of(ImmutableList.of(new Identifier(location(1, 25), "foo", false), new Identifier(location(1, 29), "bar", false), new Identifier(location(1, 33), "baz", false))),
+                        new PrincipalSpecification(PrincipalSpecification.Type.UNSPECIFIED, new Identifier(location(1, 55), "qux", false))));
+        assertThat(statement("ALTER MATERIALIZED VIEW foo.bar.baz SET AUTHORIZATION USER qux")).isEqualTo(
+                new SetAuthorizationStatement(
+                        location(1, 1),
+                        "MATERIALIZED VIEW",
+                        QualifiedName.of(ImmutableList.of(new Identifier(location(1, 25), "foo", false), new Identifier(location(1, 29), "bar", false), new Identifier(location(1, 33), "baz", false))),
+                        new PrincipalSpecification(PrincipalSpecification.Type.USER, new Identifier(location(1, 60), "qux", false))));
+        assertThat(statement("ALTER MATERIALIZED VIEW foo.bar.baz SET AUTHORIZATION ROLE qux")).isEqualTo(
+                new SetAuthorizationStatement(
+                        location(1, 1),
+                        "MATERIALIZED VIEW",
+                        QualifiedName.of(ImmutableList.of(new Identifier(location(1, 25), "foo", false), new Identifier(location(1, 29), "bar", false), new Identifier(location(1, 33), "baz", false))),
+                        new PrincipalSpecification(PrincipalSpecification.Type.ROLE, new Identifier(location(1, 60), "qux", false))));
     }
 
     @Test
@@ -3626,6 +3905,60 @@ public class TestSqlParser
                         new NodeLocation(1, 1),
                         QualifiedName.of("foo", "t"),
                         new ColumnDefinition(QualifiedName.of("c"), simpleType(location(1, 31), "bigint"), true, emptyList(), Optional.empty()), Optional.empty(), false, false));
+
+        // default column values
+        assertThat(statement("ALTER TABLE foo.t ADD COLUMN c bigint DEFAULT 123"))
+                .ignoringLocation()
+                .isEqualTo(new AddColumn(
+                        new NodeLocation(1, 1),
+                        QualifiedName.of("foo", "t"),
+                        columnDefinitionWithDefault(
+                                location(1, 30),
+                                "c",
+                                simpleType(location(1, 31), "bigint"),
+                                new LongLiteral(location(1, 47), "123")),
+                        Optional.empty(),
+                        false,
+                        false));
+
+        assertThat(statement("ALTER TABLE foo.t ADD COLUMN c varchar DEFAULT 'test default' COMMENT 'test comment'"))
+                .ignoringLocation()
+                .isEqualTo(new AddColumn(
+                        new NodeLocation(1, 1),
+                        QualifiedName.of("foo", "t"),
+                        columnDefinitionWithDefault(
+                                location(1, 30),
+                                "c",
+                                simpleType(location(1, 31), "varchar"),
+                                new StringLiteral(location(1, 47), "test default"),
+                                "test comment"),
+                        Optional.empty(),
+                        false,
+                        false));
+
+        NodeLocation location = location(1, 30);
+        DataType type = simpleType(location(1, 31), "varchar");
+        Literal defaultValue = new NullLiteral(location(1, 47));
+        assertThat(statement("ALTER TABLE foo.t ADD COLUMN c varchar DEFAULT NULL NOT NULL"))
+                .ignoringLocation()
+                .isEqualTo(new AddColumn(
+                        new NodeLocation(1, 1),
+                        QualifiedName.of("foo", "t"),
+                        new ColumnDefinition(
+                                location,
+                                qualifiedName(location, "c"),
+                                type,
+                                Optional.of(defaultValue),
+                                false,
+                                emptyList(),
+                                Optional.empty()),
+                        Optional.empty(),
+                        false,
+                        false));
+
+        assertThatThrownBy(() -> SQL_PARSER.createStatement("ALTER TABLE foo.t ADD COLUMN c varchar DEFAULT CURRENT_USER"))
+                .isInstanceOf(ParsingException.class)
+                .hasMessageMatching("line 1:48: mismatched input 'CURRENT_USER'.*");
 
         assertThat(statement("ALTER TABLE foo.t ADD COLUMN d double NOT NULL"))
                 .ignoringLocation()
@@ -3943,21 +4276,22 @@ public class TestSqlParser
     {
         Query query = simpleQuery(selectList(new AllColumns()), table(QualifiedName.of("t")));
 
-        assertStatement("CREATE VIEW a AS SELECT * FROM t", new CreateView(QualifiedName.of("a"), query, false, Optional.empty(), Optional.empty(), ImmutableList.of()));
-        assertStatement("CREATE OR REPLACE VIEW a AS SELECT * FROM t", new CreateView(QualifiedName.of("a"), query, true, Optional.empty(), Optional.empty(), ImmutableList.of()));
+        assertStatement("CREATE VIEW a AS SELECT * FROM t", new CreateView(location(1, 1), QualifiedName.of("a"), query, false, Optional.empty(), Optional.empty(), ImmutableList.of()));
+        assertStatement("CREATE OR REPLACE VIEW a AS SELECT * FROM t", new CreateView(location(1, 1), QualifiedName.of("a"), query, true, Optional.empty(), Optional.empty(), ImmutableList.of()));
 
-        assertStatement("CREATE VIEW a SECURITY DEFINER AS SELECT * FROM t", new CreateView(QualifiedName.of("a"), query, false, Optional.empty(), Optional.of(CreateView.Security.DEFINER), ImmutableList.of()));
-        assertStatement("CREATE VIEW a SECURITY INVOKER AS SELECT * FROM t", new CreateView(QualifiedName.of("a"), query, false, Optional.empty(), Optional.of(CreateView.Security.INVOKER), ImmutableList.of()));
+        assertStatement("CREATE VIEW a SECURITY DEFINER AS SELECT * FROM t", new CreateView(location(1, 1), QualifiedName.of("a"), query, false, Optional.empty(), Optional.of(CreateView.Security.DEFINER), ImmutableList.of()));
+        assertStatement("CREATE VIEW a SECURITY INVOKER AS SELECT * FROM t", new CreateView(location(1, 1), QualifiedName.of("a"), query, false, Optional.empty(), Optional.of(CreateView.Security.INVOKER), ImmutableList.of()));
 
-        assertStatement("CREATE VIEW a COMMENT 'comment' SECURITY DEFINER AS SELECT * FROM t", new CreateView(QualifiedName.of("a"), query, false, Optional.of("comment"), Optional.of(CreateView.Security.DEFINER), ImmutableList.of()));
-        assertStatement("CREATE VIEW a COMMENT '' SECURITY INVOKER AS SELECT * FROM t", new CreateView(QualifiedName.of("a"), query, false, Optional.of(""), Optional.of(CreateView.Security.INVOKER), ImmutableList.of()));
+        assertStatement("CREATE VIEW a COMMENT 'comment' SECURITY DEFINER AS SELECT * FROM t", new CreateView(location(1, 1), QualifiedName.of("a"), query, false, Optional.of("comment"), Optional.of(CreateView.Security.DEFINER), ImmutableList.of()));
+        assertStatement("CREATE VIEW a COMMENT '' SECURITY INVOKER AS SELECT * FROM t", new CreateView(location(1, 1), QualifiedName.of("a"), query, false, Optional.of(""), Optional.of(CreateView.Security.INVOKER), ImmutableList.of()));
 
-        assertStatement("CREATE VIEW a COMMENT 'comment' AS SELECT * FROM t", new CreateView(QualifiedName.of("a"), query, false, Optional.of("comment"), Optional.empty(), ImmutableList.of()));
-        assertStatement("CREATE VIEW a COMMENT '' AS SELECT * FROM t", new CreateView(QualifiedName.of("a"), query, false, Optional.of(""), Optional.empty(), ImmutableList.of()));
+        assertStatement("CREATE VIEW a COMMENT 'comment' AS SELECT * FROM t", new CreateView(location(1, 1), QualifiedName.of("a"), query, false, Optional.of("comment"), Optional.empty(), ImmutableList.of()));
+        assertStatement("CREATE VIEW a COMMENT '' AS SELECT * FROM t", new CreateView(location(1, 1), QualifiedName.of("a"), query, false, Optional.of(""), Optional.empty(), ImmutableList.of()));
 
         assertStatement(
                 "CREATE VIEW a WITH (property_1 = 'value_1', property_2 = 2) AS SELECT * FROM t",
                 new CreateView(
+                        location(1, 1),
                         QualifiedName.of("a"),
                         query,
                         false,
@@ -3967,9 +4301,9 @@ public class TestSqlParser
                                 new Property(new Identifier("property_1"), new StringLiteral("value_1")),
                                 new Property(new Identifier("property_2"), new LongLiteral("2")))));
 
-        assertStatement("CREATE VIEW bar.foo AS SELECT * FROM t", new CreateView(QualifiedName.of("bar", "foo"), query, false, Optional.empty(), Optional.empty(), ImmutableList.of()));
-        assertStatement("CREATE VIEW \"awesome view\" AS SELECT * FROM t", new CreateView(QualifiedName.of("awesome view"), query, false, Optional.empty(), Optional.empty(), ImmutableList.of()));
-        assertStatement("CREATE VIEW \"awesome schema\".\"awesome view\" AS SELECT * FROM t", new CreateView(QualifiedName.of("awesome schema", "awesome view"), query, false, Optional.empty(), Optional.empty(), ImmutableList.of()));
+        assertStatement("CREATE VIEW bar.foo AS SELECT * FROM t", new CreateView(location(1, 1), QualifiedName.of("bar", "foo"), query, false, Optional.empty(), Optional.empty(), ImmutableList.of()));
+        assertStatement("CREATE VIEW \"awesome view\" AS SELECT * FROM t", new CreateView(location(1, 1), QualifiedName.of("awesome view"), query, false, Optional.empty(), Optional.empty(), ImmutableList.of()));
+        assertStatement("CREATE VIEW \"awesome schema\".\"awesome view\" AS SELECT * FROM t", new CreateView(location(1, 1), QualifiedName.of("awesome schema", "awesome view"), query, false, Optional.empty(), Optional.empty(), ImmutableList.of()));
     }
 
     @Test
@@ -3979,50 +4313,87 @@ public class TestSqlParser
                 new Grant(
                         location(1, 1),
                         Optional.of(ImmutableList.of("INSERT", "DELETE")),
-                        new GrantObject(location(1, 1), Optional.empty(), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 25), "t", false)))),
+                        new GrantObject(location(1, 1), Optional.empty(), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 25), "t", false))), Optional.empty()),
                         new PrincipalSpecification(PrincipalSpecification.Type.UNSPECIFIED, new Identifier(location(1, 30), "u", false)),
                         false));
         assertThat(statement("GRANT UPDATE ON t TO u")).isEqualTo(
                 new Grant(
                         location(1, 1),
                         Optional.of(ImmutableList.of("UPDATE")),
-                        new GrantObject(location(1, 1), Optional.empty(), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 17), "t", false)))),
+                        new GrantObject(location(1, 1), Optional.empty(), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 17), "t", false))), Optional.empty()),
                         new PrincipalSpecification(PrincipalSpecification.Type.UNSPECIFIED, new Identifier(location(1, 22), "u", false)),
                         false));
         assertThat(statement("GRANT EXECUTE ON t TO u")).isEqualTo(
                 new Grant(
                         location(1, 1),
                         Optional.of(ImmutableList.of("EXECUTE")),
-                        new GrantObject(location(1, 1), Optional.empty(), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 18), "t", false)))),
+                        new GrantObject(location(1, 1), Optional.empty(), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 18), "t", false))), Optional.empty()),
                         new PrincipalSpecification(PrincipalSpecification.Type.UNSPECIFIED, new Identifier(location(1, 23), "u", false)),
                         false));
         assertThat(statement("GRANT SELECT ON t TO ROLE PUBLIC WITH GRANT OPTION")).isEqualTo(
                 new Grant(
                         location(1, 1),
                         Optional.of(ImmutableList.of("SELECT")),
-                        new GrantObject(location(1, 1), Optional.empty(), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 17), "t", false)))),
+                        new GrantObject(location(1, 1), Optional.empty(), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 17), "t", false))), Optional.empty()),
                         new PrincipalSpecification(PrincipalSpecification.Type.ROLE, new Identifier(location(1, 27), "PUBLIC", false)),
                         true));
         assertThat(statement("GRANT ALL PRIVILEGES ON TABLE t TO USER u")).isEqualTo(
                 new Grant(
                         location(1, 1),
                         Optional.empty(),
-                        new GrantObject(location(1, 1), Optional.of("TABLE"), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 31), "t", false)))),
+                        new GrantObject(location(1, 1), Optional.of("TABLE"), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 31), "t", false))), Optional.empty()),
                         new PrincipalSpecification(PrincipalSpecification.Type.USER, new Identifier(location(1, 41), "u", false)),
                         false));
         assertThat(statement("GRANT DELETE ON \"t\" TO ROLE \"public\" WITH GRANT OPTION")).isEqualTo(
                 new Grant(
                         location(1, 1),
                         Optional.of(ImmutableList.of("DELETE")),
-                        new GrantObject(location(1, 1), Optional.empty(), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 17), "t", true)))),
+                        new GrantObject(location(1, 1), Optional.empty(), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 17), "t", true))), Optional.empty()),
                         new PrincipalSpecification(PrincipalSpecification.Type.ROLE, new Identifier(location(1, 29), "public", true)),
                         true));
         assertThat(statement("GRANT SELECT ON SCHEMA s TO USER u")).isEqualTo(
                 new Grant(
                         location(1, 1),
                         Optional.of(ImmutableList.of("SELECT")),
-                        new GrantObject(location(1, 1), Optional.of("SCHEMA"), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 24), "s", false)))),
+                        new GrantObject(location(1, 1), Optional.of("SCHEMA"), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 24), "s", false))), Optional.empty()),
                         new PrincipalSpecification(PrincipalSpecification.Type.USER, new Identifier(location(1, 34), "u", false)),
+                        false));
+
+        // Branching
+        assertThat(statement("GRANT CREATE BRANCH ON TABLE t TO u")).isEqualTo(
+                new Grant(
+                        location(1, 1),
+                        Optional.of(ImmutableList.of("CREATE BRANCH")),
+                        new GrantObject(
+                                location(1, 1),
+                                Optional.of("TABLE"),
+                                QualifiedName.of(ImmutableList.of(new Identifier(location(1, 30), "t", false))),
+                                Optional.empty()),
+                        new PrincipalSpecification(PrincipalSpecification.Type.UNSPECIFIED, new Identifier(location(1, 35), "u", false)),
+                        false));
+
+        assertThat(statement("GRANT INSERT, DELETE ON BRANCH dev IN SCHEMA t TO u")).isEqualTo(
+                new Grant(
+                        location(1, 1),
+                        Optional.of(ImmutableList.of("INSERT", "DELETE")),
+                        new GrantObject(
+                                location(1, 1),
+                                Optional.of("SCHEMA"),
+                                QualifiedName.of(ImmutableList.of(new Identifier(location(1, 46), "t", false))),
+                                Optional.of(new Identifier(location(1, 32), "dev", false))),
+                        new PrincipalSpecification(PrincipalSpecification.Type.UNSPECIFIED, new Identifier(location(1, 51), "u", false)),
+                        false));
+
+        assertThat(statement("GRANT INSERT, DELETE ON BRANCH dev IN TABLE t TO u")).isEqualTo(
+                new Grant(
+                        location(1, 1),
+                        Optional.of(ImmutableList.of("INSERT", "DELETE")),
+                        new GrantObject(
+                                location(1, 1),
+                                Optional.of("TABLE"),
+                                QualifiedName.of(ImmutableList.of(new Identifier(location(1, 45), "t", false))),
+                                Optional.of(new Identifier(location(1, 32), "dev", false))),
+                        new PrincipalSpecification(PrincipalSpecification.Type.UNSPECIFIED, new Identifier(location(1, 50), "u", false)),
                         false));
     }
 
@@ -4033,25 +4404,25 @@ public class TestSqlParser
                 new Deny(
                         location(1, 1),
                         Optional.of(ImmutableList.of("INSERT", "DELETE")),
-                        new GrantObject(location(1, 1), Optional.empty(), QualifiedName.of(List.of(new Identifier(location(1, 24), "t", false)))),
+                        new GrantObject(location(1, 1), Optional.empty(), QualifiedName.of(List.of(new Identifier(location(1, 24), "t", false))), Optional.empty()),
                         new PrincipalSpecification(PrincipalSpecification.Type.UNSPECIFIED, new Identifier(location(1, 29), "u", false))));
         assertThat(statement("DENY UPDATE ON t TO u")).isEqualTo(
                 new Deny(
                         location(1, 1),
                         Optional.of(ImmutableList.of("UPDATE")),
-                        new GrantObject(location(1, 1), Optional.empty(), QualifiedName.of(List.of(new Identifier(location(1, 16), "t", false)))),
+                        new GrantObject(location(1, 1), Optional.empty(), QualifiedName.of(List.of(new Identifier(location(1, 16), "t", false))), Optional.empty()),
                         new PrincipalSpecification(PrincipalSpecification.Type.UNSPECIFIED, new Identifier(location(1, 21), "u", false))));
         assertThat(statement("DENY ALL PRIVILEGES ON TABLE t TO USER u")).isEqualTo(
                 new Deny(
                         location(1, 1),
                         Optional.empty(),
-                        new GrantObject(location(1, 1), Optional.of("TABLE"), QualifiedName.of(List.of(new Identifier(location(1, 30), "t", false)))),
+                        new GrantObject(location(1, 1), Optional.of("TABLE"), QualifiedName.of(List.of(new Identifier(location(1, 30), "t", false))), Optional.empty()),
                         new PrincipalSpecification(PrincipalSpecification.Type.USER, new Identifier(location(1, 40), "u", false))));
         assertThat(statement("DENY SELECT ON SCHEMA s TO USER u")).isEqualTo(
                 new Deny(
                         location(1, 1),
                         Optional.of(ImmutableList.of("SELECT")),
-                        new GrantObject(location(1, 1), Optional.of("SCHEMA"), QualifiedName.of(List.of(new Identifier(location(1, 23), "s", false)))),
+                        new GrantObject(location(1, 1), Optional.of("SCHEMA"), QualifiedName.of(List.of(new Identifier(location(1, 23), "s", false))), Optional.empty()),
                         new PrincipalSpecification(PrincipalSpecification.Type.USER, new Identifier(location(1, 33), "u", false))));
     }
 
@@ -4063,49 +4434,49 @@ public class TestSqlParser
                         location(1, 1),
                         false,
                         Optional.of(ImmutableList.of("INSERT", "DELETE")),
-                        new GrantObject(location(1, 1), Optional.empty(), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 26), "t", false)))),
+                        new GrantObject(location(1, 1), Optional.empty(), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 26), "t", false))), Optional.empty()),
                         new PrincipalSpecification(PrincipalSpecification.Type.UNSPECIFIED, new Identifier(location(1, 33), "u", false))));
         assertThat(statement("REVOKE UPDATE ON t FROM u")).isEqualTo(
                 new Revoke(
                         location(1, 1),
                         false,
                         Optional.of(ImmutableList.of("UPDATE")),
-                        new GrantObject(location(1, 1), Optional.empty(), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 18), "t", false)))),
+                        new GrantObject(location(1, 1), Optional.empty(), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 18), "t", false))), Optional.empty()),
                         new PrincipalSpecification(PrincipalSpecification.Type.UNSPECIFIED, new Identifier(location(1, 25), "u", false))));
         assertThat(statement("REVOKE EXECUTE ON t FROM u")).isEqualTo(
                 new Revoke(
                         location(1, 1),
                         false,
                         Optional.of(ImmutableList.of("EXECUTE")),
-                        new GrantObject(location(1, 1), Optional.empty(), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 19), "t", false)))),
+                        new GrantObject(location(1, 1), Optional.empty(), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 19), "t", false))), Optional.empty()),
                         new PrincipalSpecification(PrincipalSpecification.Type.UNSPECIFIED, new Identifier(location(1, 26), "u", false))));
         assertThat(statement("REVOKE GRANT OPTION FOR SELECT ON t FROM ROLE PUBLIC")).isEqualTo(
                 new Revoke(
                         location(1, 1),
                         true,
                         Optional.of(ImmutableList.of("SELECT")),
-                        new GrantObject(location(1, 1), Optional.empty(), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 35), "t", false)))),
+                        new GrantObject(location(1, 1), Optional.empty(), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 35), "t", false))), Optional.empty()),
                         new PrincipalSpecification(PrincipalSpecification.Type.ROLE, new Identifier(location(1, 47), "PUBLIC", false))));
         assertThat(statement("REVOKE ALL PRIVILEGES ON TABLE t FROM USER u")).isEqualTo(
                 new Revoke(
                         location(1, 1),
                         false,
                         Optional.empty(),
-                        new GrantObject(location(1, 1), Optional.of("TABLE"), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 32), "t", false)))),
+                        new GrantObject(location(1, 1), Optional.of("TABLE"), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 32), "t", false))), Optional.empty()),
                         new PrincipalSpecification(PrincipalSpecification.Type.USER, new Identifier(location(1, 44), "u", false))));
         assertThat(statement("REVOKE DELETE ON TABLE \"t\" FROM \"u\"")).isEqualTo(
                 new Revoke(
                         location(1, 1),
                         false,
                         Optional.of(ImmutableList.of("DELETE")),
-                        new GrantObject(location(1, 1), Optional.of("TABLE"), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 24), "t", true)))),
+                        new GrantObject(location(1, 1), Optional.of("TABLE"), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 24), "t", true))), Optional.empty()),
                         new PrincipalSpecification(PrincipalSpecification.Type.UNSPECIFIED, new Identifier(location(1, 33), "u", true))));
         assertThat(statement("REVOKE SELECT ON SCHEMA s FROM USER u")).isEqualTo(
                 new Revoke(
                         location(1, 1),
                         false,
                         Optional.of(ImmutableList.of("SELECT")),
-                        new GrantObject(location(1, 1), Optional.of("SCHEMA"), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 25), "s", false)))),
+                        new GrantObject(location(1, 1), Optional.of("SCHEMA"), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 25), "s", false))), Optional.empty()),
                         new PrincipalSpecification(PrincipalSpecification.Type.USER, new Identifier(location(1, 37), "u", false))));
     }
 
@@ -4116,35 +4487,35 @@ public class TestSqlParser
                 .isEqualTo(new Grant(
                         location(1, 1),
                         Optional.empty(),
-                        new GrantObject(location(1, 1), Optional.of("FUNKY_ENTITY"), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 38), "t", false)))),
+                        new GrantObject(location(1, 1), Optional.of("FUNKY_ENTITY"), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 38), "t", false))), Optional.empty()),
                         new PrincipalSpecification(Type.UNSPECIFIED, new Identifier(location(1, 43), "u", false)),
                         false));
         assertThat(statement("GRANT ALL PRIVILEGES ON FUNKY_ENTITY t TO u WITH GRANT OPTION"))
                 .isEqualTo(new Grant(
                         location(1, 1),
                         Optional.empty(),
-                        new GrantObject(location(1, 1), Optional.of("FUNKY_ENTITY"), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 38), "t", false)))),
+                        new GrantObject(location(1, 1), Optional.of("FUNKY_ENTITY"), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 38), "t", false))), Optional.empty()),
                         new PrincipalSpecification(Type.UNSPECIFIED, new Identifier(location(1, 43), "u", false)),
                         true));
         assertThat(statement("GRANT AUTO_GYRATE ON FUNKY_ENTITY t TO u WITH GRANT OPTION"))
                 .isEqualTo(new Grant(
                         location(1, 1),
                         Optional.of(ImmutableList.of("AUTO_GYRATE")),
-                        new GrantObject(location(1, 1), Optional.of("FUNKY_ENTITY"), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 35), "t", false)))),
+                        new GrantObject(location(1, 1), Optional.of("FUNKY_ENTITY"), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 35), "t", false))), Optional.empty()),
                         new PrincipalSpecification(Type.UNSPECIFIED, new Identifier(location(1, 40), "u", false)),
                         true));
         assertThat(statement("GRANT AUTO_GYRATE ON FUNKY_ENTITY t TO u"))
                 .isEqualTo(new Grant(
                         location(1, 1),
                         Optional.of(ImmutableList.of("AUTO_GYRATE")),
-                        new GrantObject(location(1, 1), Optional.of("FUNKY_ENTITY"), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 35), "t", false)))),
+                        new GrantObject(location(1, 1), Optional.of("FUNKY_ENTITY"), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 35), "t", false))), Optional.empty()),
                         new PrincipalSpecification(Type.UNSPECIFIED, new Identifier(location(1, 40), "u", false)),
                         false));
         assertThat(statement("GRANT AUTO_GYRATE ON t TO u"))
                 .isEqualTo(new Grant(
                         location(1, 1),
                         Optional.of(ImmutableList.of("AUTO_GYRATE")),
-                        new GrantObject(location(1, 1), Optional.empty(), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 22), "t", false)))),
+                        new GrantObject(location(1, 1), Optional.empty(), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 22), "t", false))), Optional.empty()),
                         new PrincipalSpecification(Type.UNSPECIFIED, new Identifier(location(1, 27), "u", false)),
                         false));
 
@@ -4153,47 +4524,47 @@ public class TestSqlParser
                         location(1, 1),
                         false,
                         Optional.empty(),
-                        new GrantObject(location(1, 1), Optional.of("FUNKY_ENTITY"), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 39), "t", false)))),
+                        new GrantObject(location(1, 1), Optional.of("FUNKY_ENTITY"), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 39), "t", false))), Optional.empty()),
                         new PrincipalSpecification(Type.UNSPECIFIED, new Identifier(location(1, 46), "u", false))));
         assertThat(statement("REVOKE AUTO_GYRATE ON FUNKY_ENTITY t FROM u"))
                 .isEqualTo(new Revoke(
                         location(1, 1),
                         false,
                         Optional.of(ImmutableList.of("AUTO_GYRATE")),
-                        new GrantObject(location(1, 1), Optional.of("FUNKY_ENTITY"), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 36), "t", false)))),
+                        new GrantObject(location(1, 1), Optional.of("FUNKY_ENTITY"), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 36), "t", false))), Optional.empty()),
                         new PrincipalSpecification(Type.UNSPECIFIED, new Identifier(location(1, 43), "u", false))));
         assertThat(statement("REVOKE GRANT OPTION FOR AUTO_GYRATE ON FUNKY_ENTITY t FROM u"))
                 .isEqualTo(new Revoke(
                         location(1, 1),
                         true,
                         Optional.of(ImmutableList.of("AUTO_GYRATE")),
-                        new GrantObject(location(1, 1), Optional.of("FUNKY_ENTITY"), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 53), "t", false)))),
+                        new GrantObject(location(1, 1), Optional.of("FUNKY_ENTITY"), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 53), "t", false))), Optional.empty()),
                         new PrincipalSpecification(Type.UNSPECIFIED, new Identifier(location(1, 60), "u", false))));
         assertThat(statement("REVOKE AUTO_GYRATE ON t FROM u"))
                 .isEqualTo(new Revoke(
                         location(1, 1),
                         false,
                         Optional.of(ImmutableList.of("AUTO_GYRATE")),
-                        new GrantObject(location(1, 1), Optional.empty(), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 23), "t", false)))),
+                        new GrantObject(location(1, 1), Optional.empty(), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 23), "t", false))), Optional.empty()),
                         new PrincipalSpecification(Type.UNSPECIFIED, new Identifier(location(1, 30), "u", false))));
 
         assertThat(statement("DENY ALL PRIVILEGES ON FUNKY_ENTITY t TO u"))
                 .isEqualTo(new Deny(
                         location(1, 1),
                         Optional.empty(),
-                        new GrantObject(location(1, 1), Optional.of("FUNKY_ENTITY"), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 37), "t", false)))),
+                        new GrantObject(location(1, 1), Optional.of("FUNKY_ENTITY"), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 37), "t", false))), Optional.empty()),
                         new PrincipalSpecification(Type.UNSPECIFIED, new Identifier(location(1, 42), "u", false))));
         assertThat(statement("DENY AUTO_GYRATE ON FUNKY_ENTITY t TO u"))
                 .isEqualTo(new Deny(
                         location(1, 1),
                         Optional.of(ImmutableList.of("AUTO_GYRATE")),
-                        new GrantObject(location(1, 1), Optional.of("FUNKY_ENTITY"), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 34), "t", false)))),
+                        new GrantObject(location(1, 1), Optional.of("FUNKY_ENTITY"), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 34), "t", false))), Optional.empty()),
                         new PrincipalSpecification(Type.UNSPECIFIED, new Identifier(location(1, 39), "u", false))));
         assertThat(statement("DENY AUTO_GYRATE ON t TO u"))
                 .isEqualTo(new Deny(
                         location(1, 1),
                         Optional.of(ImmutableList.of("AUTO_GYRATE")),
-                        new GrantObject(location(1, 1), Optional.empty(), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 21), "t", false)))),
+                        new GrantObject(location(1, 1), Optional.empty(), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 21), "t", false))), Optional.empty()),
                         new PrincipalSpecification(Type.UNSPECIFIED, new Identifier(location(1, 26), "u", false))));
     }
 
@@ -4201,9 +4572,9 @@ public class TestSqlParser
     public void testShowGrants()
     {
         assertThat(statement("SHOW GRANTS ON TABLE t"))
-                .isEqualTo(new ShowGrants(location(1, 1), Optional.of(new GrantObject(location(1, 1), Optional.of("TABLE"), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 22), "t", false)))))));
+                .isEqualTo(new ShowGrants(location(1, 1), Optional.of(new GrantObject(location(1, 1), Optional.of("TABLE"), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 22), "t", false))), Optional.empty()))));
         assertThat(statement("SHOW GRANTS ON t"))
-                .isEqualTo(new ShowGrants(location(1, 1), Optional.of(new GrantObject(location(1, 1), Optional.empty(), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 16), "t", false)))))));
+                .isEqualTo(new ShowGrants(location(1, 1), Optional.of(new GrantObject(location(1, 1), Optional.empty(), QualifiedName.of(ImmutableList.of(new Identifier(location(1, 16), "t", false))), Optional.empty()))));
         assertThat(statement("SHOW GRANTS"))
                 .isEqualTo(new ShowGrants(location(1, 1), Optional.empty()));
     }
@@ -4370,13 +4741,15 @@ public class TestSqlParser
     public void testExplain()
     {
         assertStatement("EXPLAIN SELECT * FROM t",
-                new Explain(simpleQuery(selectList(new AllColumns()), table(QualifiedName.of("t"))), ImmutableList.of()));
+                new Explain(location(1, 1), simpleQuery(selectList(new AllColumns()), table(QualifiedName.of("t"))), ImmutableList.of()));
         assertStatement("EXPLAIN (TYPE LOGICAL) SELECT * FROM t",
                 new Explain(
+                        location(1, 1),
                         simpleQuery(selectList(new AllColumns()), table(QualifiedName.of("t"))),
                         ImmutableList.of(new ExplainType(location(1, 1), ExplainType.Type.LOGICAL))));
         assertStatement("EXPLAIN (TYPE LOGICAL, FORMAT TEXT) SELECT * FROM t",
                 new Explain(
+                        location(1, 1),
                         simpleQuery(selectList(new AllColumns()), table(QualifiedName.of("t"))),
                         ImmutableList.of(
                                 new ExplainType(location(1, 1), ExplainType.Type.LOGICAL),
@@ -4393,10 +4766,10 @@ public class TestSqlParser
     public void testExplainAnalyze()
     {
         assertStatement("EXPLAIN ANALYZE SELECT * FROM t",
-                new ExplainAnalyze(simpleQuery(selectList(new AllColumns()), table(QualifiedName.of("t"))), false));
+                new ExplainAnalyze(location(1, 1), simpleQuery(selectList(new AllColumns()), table(QualifiedName.of("t"))), false));
 
         assertStatement("EXPLAIN ANALYZE VERBOSE SELECT * FROM t",
-                new ExplainAnalyze(simpleQuery(selectList(new AllColumns()), table(QualifiedName.of("t"))), true));
+                new ExplainAnalyze(location(1, 1), simpleQuery(selectList(new AllColumns()), table(QualifiedName.of("t"))), true));
 
         assertStatementIsInvalid("EXPLAIN ANALYZE (type DISTRIBUTED) SELECT * FROM t")
                 .withMessage("line 1:18: mismatched input 'type'. Expecting: '(', 'SELECT', 'TABLE', 'VALUES'");
@@ -4657,7 +5030,7 @@ public class TestSqlParser
     public void testPrepare()
     {
         assertStatement("PREPARE myquery FROM select * from foo",
-                new Prepare(identifier("myquery"), simpleQuery(
+                new Prepare(location(1, 1), identifier("myquery"), simpleQuery(
                         selectList(new AllColumns()),
                         table(QualifiedName.of("foo")))));
     }
@@ -4666,7 +5039,9 @@ public class TestSqlParser
     public void testPrepareDropView()
     {
         assertStatement("PREPARE statement1 FROM DROP VIEW IF EXISTS \"catalog-test\".\"test\".\"foo\"",
-                new Prepare(identifier("statement1"),
+                new Prepare(
+                        location(1, 1),
+                        identifier("statement1"),
                         new DropView(location(1, 25), QualifiedName.of("catalog-test", "test", "foo"), true)));
         assertStatementIsInvalid("PREPARE statement1 FROM DROP VIEW IF EXISTS catalog-test.test.foo")
                 .withMessage("line 1:52: mismatched input '-'. Expecting: '.', <EOF>");
@@ -4676,12 +5051,12 @@ public class TestSqlParser
     public void testPrepareWithParameters()
     {
         assertStatement("PREPARE myquery FROM SELECT ?, ? FROM foo",
-                new Prepare(identifier("myquery"), simpleQuery(
+                new Prepare(location(1, 1), identifier("myquery"), simpleQuery(
                         selectList(new Parameter(0), new Parameter(1)),
                         table(QualifiedName.of("foo")))));
 
         assertStatement("PREPARE myquery FROM SELECT * FROM foo LIMIT ?",
-                new Prepare(identifier("myquery"), simpleQuery(
+                new Prepare(location(1, 1), identifier("myquery"), simpleQuery(
                         selectList(new AllColumns()),
                         table(QualifiedName.of("foo")),
                         Optional.empty(),
@@ -4692,7 +5067,7 @@ public class TestSqlParser
                         Optional.of(new Limit(new Parameter(0))))));
 
         assertStatement("PREPARE myquery FROM SELECT ?, ? FROM foo LIMIT ?",
-                new Prepare(identifier("myquery"), simpleQuery(
+                new Prepare(location(1, 1), identifier("myquery"), simpleQuery(
                         selectList(new Parameter(0), new Parameter(1)),
                         table(QualifiedName.of("foo")),
                         Optional.empty(),
@@ -4703,7 +5078,7 @@ public class TestSqlParser
                         Optional.of(new Limit(new Parameter(2))))));
 
         assertStatement("PREPARE myquery FROM SELECT ? FROM foo FETCH FIRST ? ROWS ONLY",
-                new Prepare(identifier("myquery"), simpleQuery(
+                new Prepare(location(1, 1), identifier("myquery"), simpleQuery(
                         selectList(new Parameter(0)),
                         table(QualifiedName.of("foo")),
                         Optional.empty(),
@@ -4714,7 +5089,7 @@ public class TestSqlParser
                         Optional.of(new FetchFirst(new Parameter(1))))));
 
         assertStatement("PREPARE myquery FROM SELECT ?, ? FROM foo FETCH NEXT ? ROWS WITH TIES",
-                new Prepare(identifier("myquery"), simpleQuery(
+                new Prepare(location(1, 1), identifier("myquery"), simpleQuery(
                         selectList(new Parameter(0), new Parameter(1)),
                         table(QualifiedName.of("foo")),
                         Optional.empty(),
@@ -4725,7 +5100,7 @@ public class TestSqlParser
                         Optional.of(new FetchFirst(new Parameter(2), true)))));
 
         assertStatement("PREPARE myquery FROM SELECT ?, ? FROM foo OFFSET ? ROWS",
-                new Prepare(identifier("myquery"), simpleQuery(
+                new Prepare(location(1, 1), identifier("myquery"), simpleQuery(
                         selectList(new Parameter(0), new Parameter(1)),
                         table(QualifiedName.of("foo")),
                         Optional.empty(),
@@ -4736,7 +5111,7 @@ public class TestSqlParser
                         Optional.empty())));
 
         assertStatement("PREPARE myquery FROM SELECT ? FROM foo OFFSET ? ROWS LIMIT ?",
-                new Prepare(identifier("myquery"), simpleQuery(
+                new Prepare(location(1, 1), identifier("myquery"), simpleQuery(
                         selectList(new Parameter(0)),
                         table(QualifiedName.of("foo")),
                         Optional.empty(),
@@ -4747,7 +5122,7 @@ public class TestSqlParser
                         Optional.of(new Limit(new Parameter(2))))));
 
         assertStatement("PREPARE myquery FROM SELECT ? FROM foo OFFSET ? ROWS FETCH FIRST ? ROWS WITH TIES",
-                new Prepare(identifier("myquery"), simpleQuery(
+                new Prepare(location(1, 1), identifier("myquery"), simpleQuery(
                         selectList(new Parameter(0)),
                         table(QualifiedName.of("foo")),
                         Optional.empty(),
@@ -4852,7 +5227,7 @@ public class TestSqlParser
 
         for (String fullName : tableNames) {
             QualifiedName qualifiedName = makeQualifiedName(fullName);
-            assertStatement("SHOW STATS FOR %s".formatted(qualifiedName), new ShowStats(new Table(qualifiedName)));
+            assertStatement("SHOW STATS FOR %s".formatted(qualifiedName), new ShowStats(location(1, 1), new Table(qualifiedName)));
         }
     }
 
@@ -5028,6 +5403,7 @@ public class TestSqlParser
     private static ShowStats createShowStats(QualifiedName name, List<SelectItem> selects, Optional<Expression> where)
     {
         return new ShowStats(
+                location(1, 1),
                 new TableSubquery(simpleQuery(new Select(false, selects),
                         new Table(name),
                         where,
@@ -6127,6 +6503,19 @@ public class TestSqlParser
                         ImmutableList.of(
                                 new UpdateAssignment(new Identifier("bar"), new LongLiteral("23"))),
                         Optional.empty()));
+
+        assertThat(statement("UPDATE foo_table @ dev SET bar = 23"))
+                .isEqualTo(new Update(
+                        location(1, 1),
+                        new Table(
+                                location(1, 1),
+                                QualifiedName.of(List.of(new Identifier(location(1, 8), "foo_table", false))),
+                                Optional.of(new Identifier(location(1, 20), "dev", false))),
+                        ImmutableList.of(
+                                new UpdateAssignment(
+                                        new Identifier(location(1, 28), "bar", false),
+                                        new LongLiteral(location(1, 34), "23"))),
+                        Optional.empty()));
     }
 
     @Test
@@ -6134,7 +6523,7 @@ public class TestSqlParser
     {
         Expression rangeValue = new GenericLiteral(location(1, 37), "TIMESTAMP", "2021-03-01 00:00:01");
         QueryPeriod queryPeriod = new QueryPeriod(location(1, 17), QueryPeriod.RangeType.TIMESTAMP, rangeValue);
-        Table table = new Table(location(1, 15), qualifiedName(location(1, 15), "t"), queryPeriod);
+        Table table = new Table(location(1, 15), qualifiedName(location(1, 15), "t"), queryPeriod, Optional.empty());
         assertThat(statement("SELECT * FROM t FOR TIMESTAMP AS OF TIMESTAMP '2021-03-01 00:00:01'"))
                 .isEqualTo(
                         new Query(
@@ -6166,7 +6555,7 @@ public class TestSqlParser
 
         rangeValue = new StringLiteral(location(1, 35), "version1");
         queryPeriod = new QueryPeriod(new NodeLocation(1, 17), QueryPeriod.RangeType.VERSION, rangeValue);
-        table = new Table(location(1, 15), qualifiedName(location(1, 15), "t"), queryPeriod);
+        table = new Table(location(1, 15), qualifiedName(location(1, 15), "t"), queryPeriod, Optional.empty());
         assertThat(statement("SELECT * FROM t FOR VERSION AS OF 'version1'"))
                 .isEqualTo(
                         new Query(
@@ -6318,7 +6707,6 @@ public class TestSqlParser
                                 new BooleanLiteral(location(1, 1), "true"),
                                 new StringLiteral(location(1, 1), "..."),
                                 new BooleanLiteral(location(1, 1), "false"))));
-
     }
 
     @Test
@@ -6751,7 +7139,7 @@ public class TestSqlParser
                         Optional.empty(),
                         new QuerySpecification(
                                 location(4, 1),
-                                new Select(location(4, 1), false, ImmutableList.of(new SingleColumn(location(4, 8), new LongLiteral(location(4, 8),"1"), Optional.empty()))),
+                                new Select(location(4, 1), false, ImmutableList.of(new SingleColumn(location(4, 8), new LongLiteral(location(4, 8), "1"), Optional.empty()))),
                                 Optional.empty(),
                                 Optional.empty(),
                                 Optional.empty(),
@@ -6775,7 +7163,7 @@ public class TestSqlParser
 
         // Session after function
         assertStatementIsInvalid("WITH FUNCTION abc() RETURNS int RETURN 42, SESSION query_max_memory = '1GB' SELECT 1")
-            .withMessage("line 1:44: mismatched input 'SESSION'. Expecting: 'FUNCTION'");
+                .withMessage("line 1:44: mismatched input 'SESSION'. Expecting: 'FUNCTION'");
 
         // Session after function
         assertStatementIsInvalid("WITH SESSION query_max_memory = '1GB', FUNCTION abc() RETURNS int RETURN 42, SESSION query_max_total_memory = '1GB' SELECT 1")
@@ -6815,7 +7203,7 @@ public class TestSqlParser
                         Optional.empty(),
                         new QuerySpecification(
                                 location(7, 1),
-                                new Select(location(7, 1), false, ImmutableList.of(new SingleColumn(location(7, 8), new LongLiteral(location(7, 8),"1"), Optional.empty()))),
+                                new Select(location(7, 1), false, ImmutableList.of(new SingleColumn(location(7, 8), new LongLiteral(location(7, 8), "1"), Optional.empty()))),
                                 Optional.empty(),
                                 Optional.empty(),
                                 Optional.empty(),
